<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="213dp"
        android:layout_height="132dp"
        android:src="@drawable/foodicone" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#4682B4"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/lavender_border"
                android:layout_height="50dp"
                android:id="@+id/login_username"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/user"
                android:drawableLeft="@drawable/perfilicone"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/keyicone"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#4682B4"
                app:cornerRadius = "20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/already"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"

                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>